Implemented some functions and classes

--- a/MafiaSDK.vcxproj
+++ b/MafiaSDK.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="MafiaSDK\Game\C_Game.hpp" />
     <ClInclude Include="MafiaSDK\Game\C_Human.hpp" />
     <ClInclude Include="MafiaSDK\Game\C_Mission.hpp" />
+    <ClInclude Include="MafiaSDK\Game\C_ParticleManager.hpp" />
     <ClInclude Include="MafiaSDK\Game\C_Player.hpp" />
     <ClInclude Include="MafiaSDK\Game\C_Vehicle.hpp" />
     <ClInclude Include="MafiaSDK\Helpers.hpp" />
