--- a/MafiaSDK.vcxproj
+++ b/MafiaSDK.vcxproj
@@ -22,7 +22,7 @@
     <ProjectGuid>{174B6F01-0E35-4508-9C8E-B169C6C42027}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>MafiaSDK</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
     <ProjectName>MafiaSDK</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -155,6 +155,9 @@
     <ClInclude Include="MafiaSDK\Includer.h" />
     <ClInclude Include="MafiaSDK\MafiaSDK.h" />
     <ClInclude Include="MafiaSDK\MafiaSDK.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Library.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
