Moved stuff arround, added CMake generation.
Signed-off-by: PerikiyoXD <perikiyoxd@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,13 @@ project(mafia-sdk)
 file(GLOB_RECURSE MAFIA_SOURCES "src/*.cpp")
 
 if(MSVC)
-	add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+	add_definitions("-DUNICODE -D_UNICODE")
 endif()
 
-add_library(raknet
-	"${RAKNET_SOURCES}"
+add_library(mafia-sdk STATIC
+	"${MAFIA_SOURCES}"
 )
 
-target_include_directories(raknet
+target_include_directories(mafia-sdk
 	PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
 )
