--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,7 @@ add_library(mafia-sdk STATIC
 target_include_directories(mafia-sdk
 	PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
 )
+
+install(TARGETS mafia-sdk RUNTIME DESTINATION "${CMAKE_SOURCE_DIR}/bin"
+			LIBRARY DESTINATION "${CMAKE_SOURCE_DIR}/lib"
+			ARCHIVE DESTINATION "${CMAKE_SOURCE_DIR}/lib")
